--- a/zhk-emacs.org
+++ b/zhk-emacs.org
@@ -603,50 +603,283 @@ C-t 设置标记，原键用c-x t代替，用colemak后，t在食指太容易按
 *** Configure Helm
 ref: [[http://tuhdo.github.io/helm-intro.html][helm-tutorial]]
 #+BEGIN_SRC emacs-lisp
-  (use-package helm
-    :ensure t
-    :diminish helm-mode
-    :init (progn (require 'helm-mode))
-    :config (progn
-              (mapcar #'(lambda (package) (unless (package-installed-p package) (package-install package)))
-                      '(helm-swoop helm-flx helm-fuzzier smex helm-smex))
-              ;; (use-package helm-ido-like
-              ;;   :load-path "site-lisp"
-              ;;   :config (progn
-              ;;             (helm-ido-like)))
-              ;; (require 'helm-config)
-              ;; (helm-mode +1)
-              ;; (setq helm-buffers-fuzzy-matching t
-              ;;       helm-recentf-fuzzy-match    t
-              ;;       helm-M-x-fuzzy-match t)
-              ;; (validate-setq helm-ff-file-name-history-use-recentf t)
-              ;; (validate-setq helm-reuse-last-window-split-state t)
-              ;; ;; Don't use full width of the frame
-              ;; (validate-setq helm-split-window-in-side-p t)
-              ;; (helm-autoresize-mode t)
-              (use-package helm-projectile
-                :ensure t
-                :init (progn
-                        (helm-projectile-on)
-                        (setq projectile-switch-project-action 'helm-projectile))
-                :config (progn
-                          (validate-setq projectile-completion-system 'helm)
-                          ;; fix cannot create new file bug inside helm-projectile
-                          ;; https://www.reddit.com/r/emacs/comments/3m8i5r/helmprojectile_quickly_findcreate_new_file_in/
-                          (defvar helm-source-file-not-found
-                            (helm-build-dummy-source
-                                "Create file"
-                              :action 'find-file))
-                          (add-to-list 'helm-projectile-sources-list
-                                       helm-source-file-not-found t))))
-    :bind
-    (("M-x" . helm-M-x)
-     ("C-x b" . helm-mini)
-     ("M-y" . helm-show-kill-ring)
-     ("C-x C-f" . helm-find-files))
-    )
+  ;; (use-package helm
+  ;;   :ensure t
+  ;;   :diminish helm-mode
+  ;;   :init (progn (require 'helm-mode))
+  ;;   :config (progn
+  ;;             (mapcar #'(lambda (package) (unless (package-installed-p package) (package-install package)))
+  ;;                     '(helm-swoop helm-flx helm-fuzzier smex helm-smex))
+  ;;             ;; (use-package helm-ido-like
+  ;;             ;;   :load-path "site-lisp"
+  ;;             ;;   :config (progn
+  ;;             ;;             (helm-ido-like)))
+  ;;             ;; (require 'helm-config)
+  ;;             ;; (helm-mode +1)
+  ;;             ;; (setq helm-buffers-fuzzy-matching t
+  ;;             ;;       helm-recentf-fuzzy-match    t
+  ;;             ;;       helm-M-x-fuzzy-match t)
+  ;;             ;; (validate-setq helm-ff-file-name-history-use-recentf t)
+  ;;             ;; (validate-setq helm-reuse-last-window-split-state t)
+  ;;             ;; ;; Don't use full width of the frame
+  ;;             ;; (validate-setq helm-split-window-in-side-p t)
+  ;;             ;; (helm-autoresize-mode t)
+  ;;             (use-package helm-projectile
+  ;;               :ensure t
+  ;;               :init (progn
+  ;;                       (helm-projectile-on)
+  ;;                       (setq projectile-switch-project-action 'helm-projectile))
+  ;;               :config (progn
+  ;;                         (validate-setq projectile-completion-system 'helm)
+  ;;                         ;; fix cannot create new file bug inside helm-projectile
+  ;;                         ;; https://www.reddit.com/r/emacs/comments/3m8i5r/helmprojectile_quickly_findcreate_new_file_in/
+  ;;                         (defvar helm-source-file-not-found
+  ;;                           (helm-build-dummy-source
+  ;;                               "Create file"
+  ;;                             :action 'find-file))
+  ;;                         (add-to-list 'helm-projectile-sources-list
+  ;;                                      helm-source-file-not-found t))))
+  ;;   :bind
+  ;;   (("M-x" . helm-M-x)
+  ;;    ("C-x b" . helm-mini)
+  ;;    ("M-y" . helm-show-kill-ring)
+  ;;    ("C-x C-f" . helm-find-files))
+  ;;   )
 
   (ido-mode -1) ;; Turn off ido mode in case I enabled it accidentally
+#+END_SRC
+*** use vertico
+#+BEGIN_SRC emacs-lisp
+  ;; Enable vertico
+  (use-package vertico
+    :ensure t
+    :init
+    (vertico-mode)
+
+    ;; Different scroll margin
+    ;; (setq vertico-scroll-margin 0)
+
+    ;; Show more candidates
+    ;; (setq vertico-count 20)
+
+    ;; Grow and shrink the Vertico minibuffer
+    ;; (setq vertico-resize t)
+
+    ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
+    ;; (setq vertico-cycle t)
+    )
+
+  ;; Optionally use the `orderless' completion style. See
+  ;; `+orderless-dispatch' in the Consult wiki for an advanced Orderless style
+  ;; dispatcher. Additionally enable `partial-completion' for file path
+  ;; expansion. `partial-completion' is important for wildcard support.
+  ;; Multiple files can be opened at once with `find-file' if you enter a
+  ;; wildcard. You may also give the `initials' completion style a try.
+  (use-package orderless
+    :ensure t
+    :init
+    ;; Configure a custom style dispatcher (see the Consult wiki)
+    ;; (setq orderless-style-dispatchers '(+orderless-dispatch)
+    ;;       orderless-component-separator #'orderless-escapable-split-on-space)
+    (setq completion-styles '(orderless)
+          completion-category-defaults nil
+          completion-category-overrides '((file (styles partial-completion)))))
+
+  ;; Persist history over Emacs restarts. Vertico sorts by history position.
+  (use-package savehist
+    :ensure t
+    :init
+    (savehist-mode))
+
+  ;; A few more useful configurations...
+  (use-package emacs
+    :ensure t
+    :init
+    ;; Add prompt indicator to `completing-read-multiple'.
+    ;; Alternatively try `consult-completing-read-multiple'.
+    (defun crm-indicator (args)
+      (cons (concat "[CRM] " (car args)) (cdr args)))
+    (advice-add #'completing-read-multiple :filter-args #'crm-indicator)
+
+    ;; Do not allow the cursor in the minibuffer prompt
+    (setq minibuffer-prompt-properties
+          '(read-only t cursor-intangible t face minibuffer-prompt))
+    (add-hook 'minibuffer-setup-hook #'cursor-intangible-mode)
+
+    ;; Emacs 28: Hide commands in M-x which do not work in the current mode.
+    ;; Vertico commands are hidden in normal buffers.
+    ;; (setq read-extended-command-predicate
+    ;;       #'command-completion-default-include-p)
+
+    ;; Enable recursive minibuffers
+    (setq enable-recursive-minibuffers t))
+
+  ;; Enable richer annotations using the Marginalia package
+  (use-package marginalia
+    :ensure t
+    ;; Either bind `marginalia-cycle` globally or only in the minibuffer
+    :bind (("M-A" . marginalia-cycle)
+           :map minibuffer-local-map
+           ("M-A" . marginalia-cycle))
+
+    ;; The :init configuration is always executed (Not lazy!)
+    :init
+
+    ;; Must be in the :init section of use-package such that the mode gets
+    ;; enabled right away. Note that this forces loading the package.
+    (marginalia-mode))
+
+
+
+  ;; Example configuration for Consult
+  (use-package consult
+    :ensure t
+    ;; Replace bindings. Lazily loaded due by `use-package'.
+    :bind (;; C-c bindings (mode-specific-map)
+           ("C-c h" . consult-history)
+           ("C-c m" . consult-mode-command)
+           ("C-c k" . consult-kmacro)
+           ;; C-x bindings (ctl-x-map)
+           ("C-x M-:" . consult-complex-command)     ;; orig. repeat-complex-command
+           ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
+           ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
+           ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame
+           ("C-x r b" . consult-bookmark)            ;; orig. bookmark-jump
+           ;; Custom M-# bindings for fast register access
+           ("M-#" . consult-register-load)
+           ("M-'" . consult-register-store)          ;; orig. abbrev-prefix-mark (unrelated)
+           ("C-M-#" . consult-register)
+           ;; Other custom bindings
+           ("M-y" . consult-yank-pop)                ;; orig. yank-pop
+           ("<help> a" . consult-apropos)            ;; orig. apropos-command
+           ;; M-g bindings (goto-map)
+           ("M-g e" . consult-compile-error)
+           ("M-g f" . consult-flymake)               ;; Alternative: consult-flycheck
+           ("M-g g" . consult-goto-line)             ;; orig. goto-line
+           ("M-g M-g" . consult-goto-line)           ;; orig. goto-line
+           ("M-g o" . consult-outline)               ;; Alternative: consult-org-heading
+           ("M-g m" . consult-mark)
+           ("M-g k" . consult-global-mark)
+           ("M-g i" . consult-imenu)
+           ("M-g I" . consult-imenu-multi)
+           ;; M-s bindings (search-map)
+           ("M-s d" . consult-find)
+           ("M-s D" . consult-locate)
+           ("M-s g" . consult-grep)
+           ("M-s G" . consult-git-grep)
+           ("M-s r" . consult-ripgrep)
+           ("M-s l" . consult-line)
+           ("M-s L" . consult-line-multi)
+           ("M-s m" . consult-multi-occur)
+           ("M-s k" . consult-keep-lines)
+           ("M-s u" . consult-focus-lines)
+           ;; Isearch integration
+           ("M-s e" . consult-isearch-history)
+           :map isearch-mode-map
+           ("M-e" . consult-isearch-history)         ;; orig. isearch-edit-string
+           ("M-s e" . consult-isearch-history)       ;; orig. isearch-edit-string
+           ("M-s l" . consult-line)                  ;; needed by consult-line to detect isearch
+           ("M-s L" . consult-line-multi))           ;; needed by consult-line to detect isearch
+
+    ;; Enable automatic preview at point in the *Completions* buffer. This is
+    ;; relevant when you use the default completion UI. You may want to also
+    ;; enable `consult-preview-at-point-mode` in Embark Collect buffers.
+    :hook (completion-list-mode . consult-preview-at-point-mode)
+
+    ;; The :init configuration is always executed (Not lazy)
+    :init
+
+    ;; Optionally configure the register formatting. This improves the register
+    ;; preview for `consult-register', `consult-register-load',
+    ;; `consult-register-store' and the Emacs built-ins.
+    (setq register-preview-delay 0
+          register-preview-function #'consult-register-format)
+
+    ;; Optionally tweak the register preview window.
+    ;; This adds thin lines, sorting and hides the mode line of the window.
+    (advice-add #'register-preview :override #'consult-register-window)
+
+    ;; Optionally replace `completing-read-multiple' with an enhanced version.
+    (advice-add #'completing-read-multiple :override #'consult-completing-read-multiple)
+
+    ;; Use Consult to select xref locations with preview
+    (setq xref-show-xrefs-function #'consult-xref
+          xref-show-definitions-function #'consult-xref)
+
+    ;; Configure other variables and modes in the :config section,
+    ;; after lazily loading the package.
+    :config
+
+    ;; Optionally configure preview. The default value
+    ;; is 'any, such that any key triggers the preview.
+    ;; (setq consult-preview-key 'any)
+    ;; (setq consult-preview-key (kbd "M-."))
+    ;; (setq consult-preview-key (list (kbd "<S-down>") (kbd "<S-up>")))
+    ;; For some commands and buffer sources it is useful to configure the
+    ;; :preview-key on a per-command basis using the `consult-customize' macro.
+    (consult-customize
+     consult-theme
+     :preview-key '(:debounce 0.2 any)
+     consult-ripgrep consult-git-grep consult-grep
+     consult-bookmark consult-recent-file consult-xref
+     consult--source-recent-file consult--source-project-recent-file consult--source-bookmark
+     :preview-key (kbd "M-."))
+
+    ;; Optionally configure the narrowing key.
+    ;; Both < and C-+ work reasonably well.
+    (setq consult-narrow-key "<") ;; (kbd "C-+")
+
+    ;; Optionally make narrowing help available in the minibuffer.
+    ;; You may want to use `embark-prefix-help-command' or which-key instead.
+    ;; (define-key consult-narrow-map (vconcat consult-narrow-key "?") #'consult-narrow-help)
+
+    ;; Optionally configure a function which returns the project root directory.
+    ;; There are multiple reasonable alternatives to chose from.
+    ;;;; 1. project.el (project-roots)
+    (setq consult-project-root-function
+          (lambda ()
+            (when-let (project (project-current))
+              (car (project-roots project)))))
+    ;;;; 2. projectile.el (projectile-project-root)
+    ;; (autoload 'projectile-project-root "projectile")
+    ;; (setq consult-project-root-function #'projectile-project-root)
+    ;;;; 3. vc.el (vc-root-dir)
+    ;; (setq consult-project-root-function #'vc-root-dir)
+    ;;;; 4. locate-dominating-file
+    ;; (setq consult-project-root-function (lambda () (locate-dominating-file "." ".git")))
+  )
+
+
+  (use-package embark
+    :ensure t
+
+    :bind
+    (("C-." . embark-act)         ;; pick some comfortable binding
+     ("C-;" . embark-dwim)        ;; good alternative: M-.
+     ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
+
+    :init
+
+    ;; Optionally replace the key help with a completing-read interface
+    (setq prefix-help-command #'embark-prefix-help-command)
+
+    :config
+
+    ;; Hide the mode line of the Embark live/completions buffers
+    (add-to-list 'display-buffer-alist
+                 '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
+                   nil
+                   (window-parameters (mode-line-format . none)))))
+
+  ;; Consult users will also want the embark-consult package.
+  (use-package embark-consult
+    :ensure t
+    :after (embark consult)
+    :demand t ; only necessary if you have the hook below
+    ;; if you want to have consult previews as you move around an
+    ;; auto-updating embark collect buffer
+    :hook
+    (embark-collect-mode . consult-preview-at-point-mode))
 #+END_SRC
 *** add =multiple-cursors= package
 #+BEGIN_SRC emacs-lisp
