use default company-backends in python-mode

--- a/zhk-emacs.org
+++ b/zhk-emacs.org
@@ -1020,6 +1020,7 @@ ref: [[http://tuhdo.github.io/helm-intro.html][helm-tutorial]]
         :ensure t
         :custom
         (rime-librime-root tmp-rime-root)
+        ;; (rime-emacs-module-header-root "path to emacs-module.h")
         (rime-share-data-dir (expand-file-name "data" tmp-rime-root))
         (rime-user-data-dir (expand-file-name "user" tmp-rime-root))
         (rime-show-candidate 'posframe)
@@ -1910,13 +1911,14 @@ reference: [[http://ensime.github.io/editors/emacs/install/]]
                     '((:gopls .
                               ((staticcheck . t)
                                (matcher . "CaseSensitive")))))
-      (defun inner-zhk/python-eglot-ensure ()
-        "reorder the compay-backends and enable eglot"
-        (setq-local company-backends
-                    (cons 'company-capf
-                          (remove 'company-capf company-backends)))
-        (eglot-ensure))
-      (add-hook 'python-mode-hook 'inner-zhk/python-eglot-ensure)))
+      ;; (defun inner-zhk/python-eglot-ensure ()
+      ;;   "reorder the compay-backends and enable eglot"
+      ;;   (setq-local company-backends
+      ;;               (cons 'company-capf
+      ;;                     (remove 'company-capf company-backends)))
+      ;;   (eglot-ensure))
+      ;; (add-hook 'python-mode-hook 'inner-zhk/python-eglot-ensure))
+      (add-hook 'python-mode-hook 'eglot-ensure))
 
   (use-package go-mode
     :ensure t
