--- a/zhk-emacs.org
+++ b/zhk-emacs.org
@@ -663,11 +663,23 @@ ref: [[http://tuhdo.github.io/helm-intro.html][helm-tutorial]]
     ;; (setq vertico-count 20)
 
     ;; Grow and shrink the Vertico minibuffer
-    ;; (setq vertico-resize t)
+    (setq vertico-resize t)
 
     ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
     ;; (setq vertico-cycle t)
     )
+
+  ;; Configure directory extension.
+  (use-package vertico-directory
+    :after vertico
+    :ensure nil
+    ;; More convenient directory navigation commands
+    :bind (:map vertico-map
+                ("RET" . vertico-directory-enter)
+                ("DEL" . vertico-directory-delete-char)
+                ("M-DEL" . vertico-directory-delete-word))
+    ;; Tidy shadowed file names
+    :hook (rfn-eshadow-update-overlay . vertico-directory-tidy))
 
   ;; Optionally use the `orderless' completion style. See
   ;; `+orderless-dispatch' in the Consult wiki for an advanced Orderless style
